<resources>
    <string name="app_name">Performance Control</string>
    <string name="tab_cpu_settings">CPU Speed</string>
    <string name="tab_battery_info">Battery</string>
    <string name="tab_oom_settings">Memory</string>
    <string name="tab_volt_settings">Voltage Control</string>
    <string name="tab_adv_settings">"Advanced"</string>
    <string name="tab_time_in_state">Time In State</string>
    <string name="tab_cpu_info">General Info</string>
    <string name="tab_disk_info">Disk Info</string>
    <string name="tab_tools">Tools</string>
    <string name="tab_wakelocks">Wakelocks</string>
    <string name="tab_power_profile">Power Profile</string>
    <string name="menu_tab">Tabs</string>
    <string name="mt_refresh">Refresh</string>
    <string name="mt_app_settings">"App Settings"</string>
    <string name="mt_reset">Reset</string>
    <string name="mt_restore">Restore</string>
    <string name="mt_plus25">Increase by 25 mV</string>
    <string name="mt_minus25">Decrease by 25 mV</string>
    <string name="mt_share">Share</string>
    <string name="current_speed">Current Speed</string>
    <string name="current_max">Maximum speed: </string>
    <string name="current_max_power_profile">Power Profiles enabled</string>
    <string name="current_min">Minimum speed: </string>
    <string name="governor">Governor</string>
    <string name="io">I/O Scheduler</string>
    <string name="sob">Apply automatically on boot</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cpu_info_list_header">Core Status</string>
    <string name="cpu_speed_header">Core Limits</string>
    <string name="other_settings_header">Other settings</string>
    <string name="core_offline">Offline</string>
    <string name="core">Core</string>
    <string name="prefcat_free_memory">FREE MEMORY</string>
    <string name="prefcat_tweaks">FAST CHARGE</string>
    <string name="prefcat_misc_short">MISC</string>
    <string name="prefcat_read_ahead">SD READ AHEAD</string>
    <string name="prefcat_vm_settings">DALVIK SETTINGS</string>
    <string name="dt_free_memory">Minfree Taskkiller</string>
    <string name="dt_read_ahead">SD Read Ahead</string>
    <string name="pt_free_memory">Free memory</string>
    <string name="ps_free_memory">Amount of RAM the minfree taskkiller will keep |
        Current: %s</string>
    <string name="ps_free_memory_boot">Apply the amount above at boot</string>
    <string name="pt_read_ahead">Storage read ahead</string>
    <string name="ps_read_ahead">Amount to read ahead on storage, in kb |
        Current: %s</string>
    <string name="ps_fast_charge_boot">Fast charge</string>
    <string name="fast_charge_warning">YOU WILL NOT BE ABLE TO CONNECT TO YOUR PC AFTER
        EACH REBOOT!\n\nWhile Fast Charge is ON, you can *only* charge your phone!</string>
    <string name="fast_charge_notification_title">Fast Charge is ON!</string>
    <string name="fast_charge_notification_message">Phone is in charge-only mode!</string>
    <string name="prefcat_force_highend_gfx">High-end Graphics</string>
    <string name="pref_force_highend_gfx_title">Force high-end graphics</string>
    <string name="pref_force_highend_gfx_summary">Enables high-end visual effects such as transparent status/navigation bar (requires reboot)</string>
    <string name="prefcat_oom">MINIMUM FREE MEMORY</string>
    <string name="title_foreground_app">Foreground applications</string>
    <string name="title_visible_app">Visible Applications</string>
    <string name="title_secondary_server">Secondary Server</string>
    <string name="title_hidden_app">Hidden Applications</string>
    <string name="title_content_providers">Content Providers</string>
    <string name="title_empty_app">Empty Applications</string>
    <string name="prefcat_oom_predefines">PRESETS</string>
    <string name="pt_oom">Minfree Taskkiller Presets</string>
    <string name="pt_verylight">Very Light (Kills rarely)</string>
    <string name="pt_light">Light</string>
    <string name="pt_medium">Medium</string>
    <string name="pt_aggressive">Aggressive</string>
    <string name="pt_veryaggressive">Very Aggressive (Kills often)</string>
    <string name="prefcat_user_proc">NOT KILLABLE USER PROCESSES</string>
    <string name="prefcat_sys_proc">NOT KILLABLE SYSTEM PROCESSES</string>
    <string name="pt_user_proc">Enable not killable user processes</string>
    <string name="pt_sys_proc">Enable not killable system processes</string>
    <string name="pt_user_names_proc">User Processes whitelist</string>
    <string name="pt_sys_names_proc">System Processes whitelist</string>
    <string name="ps_restore_boot">Restore above settings at boot</string>
    <string name="ps_user_proc">The list of user process names (comma separated)</string>
    <string name="ps_sys_proc">The list of system process names (comma separated)</string>
    <string name="no_proc">No packages</string>
    <string name="prefcat_bln">BACKLIGHT NOTIFICATION</string>
    <string name="pt_bln">Backlight Notification</string>
    <string name="blx_info">Battery Life eXtender feature\nAuthor Ezekeel</string>
    <string name="prefcat_blx">BATTERY LIFE EXTENDER</string>
    <string name="pt_blx_boot">Set on boot</string>
    <string name="ps_blx_boot">Apply the amount above at boot</string>
    <string name="blx_title">Charge limit:</string>
    <string name="dsync_info">Dynamic FSync feature\nAuthor Paul Reioux (faux123)</string>
    <string name="prefcat_dsync">DYNAMIC FSYNC</string>
    <string name="ps_dsync">Setting will be restored on reboot</string>
    <string name="pt_dsync">Dynamic Fsync</string>
    <string name="prefcat_bltimeout">BACKLIGHT TIMEOUT</string>
    <string name="ps_bltimeout">%s ms</string>
    <string name="bltimeout_title">Backlight timeout</string>
    <string name="prefcat_bltouch">BACKLIGHT ON TOUCHSCREEN</string>
    <string name="pt_bltouch">Backlight on touchscreen</string>
    <string name="pfk_info">Phantom Key Presses Filter module ver. %s\nAuthor Cristoforo Cataldo (Christopher83)</string>
    <string name="prefcat_pfk">PHANTOM KEY PRESSES FILTER</string>
    <string name="pt_home_enabled">Home key filter</string>
    <string name="ps_home_enabled">Ignored key pressed: %s</string>
    <string name="home_allowed_irq_title">Max allowed interrupts</string>
    <string name="home_report_wait_title">Report wait time</string>
    <string name="pt_menuback_enabled">Menu/Back keys filter</string>
    <string name="ps_menuback_enabled">Ignored key pressed: %s</string>
    <string name="menuback_interrupt_checks_title">Interrupts checks</string>
    <string name="menuback_first_err_wait_title">First error wait time</string>
    <string name="menuback_last_err_wait_title">Last error wait time</string>
    <string name="ps_pfk_set_on_boot">If enabled will restore all pkf settings on reboot</string>
    <string name="dynamic_writeback_info">Dynamic Dirty Page Writebacks feature\nAuthor Cristoforo Cataldo (Christopher83)</string>
    <string name="dynamic_write_back_title">DYNAMIC DIRTY PAGE WRITEBACKS</string>
    <string name="pt_dynamic_write_back">Dynamic Dirty Writeback</string>
    <string name="dynamic_writeback_active_title">Dirty Writeback Active centisecs</string>
    <string name="dynamic_writeback_suspend_title">Dirty Writeback Suspend centisecs</string>
    <string name="size_25_mb">25mb</string>
    <string name="size_50_mb">50mb</string>
    <string name="size_75_mb">75mb</string>
    <string name="size_80_mb">80mb</string>
    <string name="size_100_mb">100mb</string>
    <string name="size_128_kb">128kb</string>
    <string name="size_256_kb">256kb</string>
    <string name="size_512_kb">512kb</string>
    <string name="size_1024_kb">1024kb</string>
    <string name="size_2048_kb">2048kb</string>
    <string name="size_4096_kb">4096kb</string>
    <string name="volt_info">ATTENTION!\nBefore activating Set on boot, make sure that the values ​​entered do not exceed limits or risk the phone to freeze.</string>
    <string name="ps_volt_mhz_voltage">" Hz"</string>
    <string name="ps_volt_save">"Save"</string>
    <string name="ps_volt_current_voltage">"Current voltage: "</string>
    <string name="ps_volt_setting_to_apply">"Setting to apply: "</string>
    <string name="pt_volt_control">Voltage control</string>
    <string name="ps_volt_control">Set voltages for each frequency</string>
    <string name="apply_values">Apply values</string>
    <string name="freq">Frequency</string>
    <string name="current">mV current</string>
    <string name="saved">mV saved</string>
    <string name="not_supported">Your kernel does not support voltage control</string>
    <string name="ps_vm_set_on_boot">If enabled will restore all vm settings on reboot</string>
    <string name="dirty_ratio_title">Dirty ratio</string>
    <string name="dirty_ratio_summary">A higher ratio means lower CPU but slower app startups</string>
    <string name="dirty_background_title">Dirty background ratio</string>
    <string name="dirty_expire_title">Dirty expire centisecs</string>
    <string name="dirty_writeback_title">Dirty writeback centisecs</string>
    <string name="min_free_title">Minfree kbytes</string>
    <string name="overcommit_title">Overcommit ratio</string>
    <string name="swappiness_title">Swappiness</string>
    <string name="vfs_title">VFS cache pressure</string>
    <string name="time_in_state">TIME IN STATE</string>
    <string name="unused_cpu_states">UNUSED CPU STATES</string>
    <string name="total_state_time">TOTAL STATE TIME</string>
    <string name="prefcat_sh">CUSTOM SHELL COMMAND</string>
    <string name="sh_title">Edit shell command</string>
    <string name="ps_sh">Command will be executed at boot.</string>
    <string name="prefcat_wipe_cache">CACHE and DALVIK CACHE</string>
    <string name="wipe_cache_title">Wipe cache and dalvik cache</string>
    <string name="prefcat_flash_img">FLASH IMG FILE</string>
    <string name="kernel_img_title">Flash KERNEL</string>
    <string name="ps_kernel_img">Flash boot.img files as kernel. Can choose individual boot.img file or any zip file that contains boot.img</string>
    <string name="recovery_img_title">Flash RECOVERY</string>
    <string name="ps_recovery_img">Flash recovery.img files as recovery. Can choose individual recovery.img file or any zip file that contains recovery.img</string>
    <string name="prefcat_residual_files">CLEAN RESIDUAL FILES</string>
    <string name="residual_files_title">Clean residual files</string>
    <string name="prefcat_optim_db">OPTIMIZE DBs</string>
    <string name="optim_db_title">Optimize Databases</string>
    <string name="prefcat_fix_perms">FIX PERMISSIONS</string>
    <string name="fix_perms_title">Fix permissions</string>
    <string name="prefcat_ksm">KERNEL SAMEPAGE MERGING</string>
    <string name="pt_run_ksm">Enable KSM</string>
    <string name="ksm_adv_title">Settings</string>
    <string name="prefcat_freezer">FREEZE or DEFROST PACKAGES</string>
    <string name="pt_freeze">Freeze Package</string>
    <string name="pt_unfreeze">Defrost Package</string>
    <string name="ps_freeze">List of all installed packages</string>
    <string name="ps_unfreeze">List of frozen packages</string>
    <string name="power_profile">Profiles</string>
    <string name="power_profile_enable">Enabled</string>
    <string name="default_power_profile">Default profile</string>
    <string name="screen_off_power_profile">Screen-off profile</string>
    <string name="power_profile_apps">Application profiles</string>
    <string name="power_profile_apps_summary">Set specific profiles for applications</string>
    <string name="power_profile_plugged">Profiles while plugged</string>
    <string name="power_profile_plugged_summary">Use profiles also while power is plugged</string>
    <string name="power_profile_summary">Show available profiles</string>
</resources>