<?xml version="1.0" encoding="utf-8"?>
<!--
Performance Control - An Android CPU Control application
Copyright (C) 2012  James Roberts

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

    <PreferenceCategory
            android:key="performance"
            android:title="@string/prefcat_free_memory">

        <ListPreference
                android:dialogTitle="@string/dt_free_memory"
                android:entries="@array/minfree"
                android:entryValues="@array/minfree_values"
                android:key="pref_minfree"
                android:persistent="true"
                android:summary="@string/ps_free_memory"
                android:title="@string/pt_free_memory"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_minfree_boot"
                android:summary="@string/ps_free_memory_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:key="category_read_ahead"
            android:title="@string/prefcat_read_ahead">

        <ListPreference
                android:dialogTitle="@string/dt_read_ahead"
                android:entries="@array/read_ahead"
                android:entryValues="@array/read_ahead_values"
                android:key="pref_read_ahead"
                android:persistent="true"
                android:title="@string/pt_read_ahead"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_read_ahead_boot"
                android:summary="@string/ps_read_ahead_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:key="kernel"
            android:title="@string/prefcat_tweaks">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_fast_charge"
                android:summary="@string/ps_fast_charge_boot"
                android:title="@string/pt_fast_charge_boot"/>
</PreferenceCategory>

<!--BLX -->
    <PreferenceCategory
            android:key="blx"
            android:title="@string/prefcat_blx">

        <Preference
                android:key="pref_blx"
                android:title="@string/blx_title"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="blx_sob"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>
<!-- Dynamic Fsync -->
    <PreferenceCategory
            android:key="dsync"
            android:title="@string/prefcat_dsync">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dsync"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_dsync"/>
    </PreferenceCategory>
<!-- PFK -->
    <PreferenceCategory
            android:key="pfk"
            android:title="@string/prefcat_pfk">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_home_on"
                android:summary="@string/ps_home_enabled"
                android:title="@string/pt_home_enabled"/>

        <Preference
                android:key="pref_home_allowed_irq"
                android:title="@string/home_allowed_irq_title"/>
        <Preference
                android:key="pref_home_report_wait"
                android:title="@string/home_report_wait_title"/>    
	
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_menuback_on"
                android:summary="@string/ps_menuback_enabled"
                android:title="@string/pt_menuback_enabled"/>
        <Preference
                android:key="pref_menuback_interrupt_checks"
                android:title="@string/menuback_interrupt_checks_title"/>
        <Preference
                android:key="pref_menuback_first_err_wait"
                android:title="@string/menuback_first_err_wait_title"/>
        <Preference
                android:key="pref_menuback_last_err_wait"
                android:title="@string/menuback_last_err_wait_title"/>	
	 <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_sob"
                android:summary="@string/ps_pfk_set_on_boot"
                android:title="@string/sob"/>	
    </PreferenceCategory>
<!-- -->
    <PreferenceCategory
            android:key="vm_settings"
            android:title="@string/prefcat_vm_settings">

        <Preference
                android:key="pref_dirty_ratio"
                android:title="@string/dirty_ratio_title"/>

        <Preference
                android:key="pref_dirty_background"
                android:title="@string/dirty_background_title"/>

        <Preference
                android:key="pref_dirty_expire"
                android:title="@string/dirty_expire_title"/>

        <Preference
                android:key="pref_dirty_writeback"
                android:title="@string/dirty_writeback_title"/>

        <Preference
                android:key="pref_min_free_kb"
                android:title="@string/min_free_title"/>

        <Preference
                android:key="pref_overcommit"
                android:title="@string/overcommit_title"/>

        <Preference
                android:key="pref_swappiness"
                android:title="@string/swappiness_title"/>

        <Preference
                android:key="pref_vfs"
                android:title="@string/vfs_title"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="vm_sob"
                android:summary="@string/ps_vm_set_on_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>

</PreferenceScreen>
