<?xml version="1.0" encoding="utf-8"?>
<!--
Performance Control - An Android CPU Control application
Copyright (C) 2012  James Roberts

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

    <PreferenceCategory
            android:key="category_sh"
            android:title="@string/prefcat_sh">
    <Preference
                android:key="pref_sh"
                android:summary="@string/ps_sh"
                android:title="@string/sh_title"/>

    </PreferenceCategory>
    <PreferenceCategory
            android:key="category_wipe_cache"
            android:title="@string/prefcat_wipe_cache">
        <Preference
                android:key="pref_wipe_cache"
                android:title="@string/wipe_cache_title"/>

    </PreferenceCategory>
    <PreferenceCategory
            android:key="category_fix_perms"
            android:title="@string/prefcat_fix_perms">
        <Preference
                android:key="pref_fix_perms"
                android:title="@string/fix_perms_title"/>

    </PreferenceCategory>
    <PreferenceCategory
            android:key="category_flash_img"
            android:title="@string/prefcat_flash_img">
        <Preference
                android:key="pref_kernel_img"
                android:summary="@string/ps_kernel_img"
                android:title="@string/kernel_img_title"/>
        <Preference
                android:key="pref_recovery_img"
                android:summary="@string/ps_recovery_img"
                android:title="@string/recovery_img_title"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:key="category_residual_files"
            android:title="@string/prefcat_residual_files">
        <Preference
                android:key="pref_residual_files"
                android:title="@string/residual_files_title"/>

    </PreferenceCategory>
    <PreferenceCategory
            android:key="category_optim_db"
            android:title="@string/prefcat_optim_db">
        <Preference
                android:key="pref_optim_db"
                android:title="@string/optim_db_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_freezer"
        android:title="@string/prefcat_freezer">
        <Preference
            android:key="freeze_packs"
            android:summary="@string/ps_freeze"
            android:title="@string/pt_freeze"/>
        <Preference
            android:key="unfreeze_packs"
            android:summary="@string/ps_unfreeze"
            android:title="@string/pt_unfreeze"/>
    </PreferenceCategory>
</PreferenceScreen>
