<?xml version="1.0" encoding="utf-8"?><!--
Performance Control - An Android CPU Control application
Copyright (C) 2012  James Roberts

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:title="@string/power_profile">

        <SwitchPreference
            android:defaultValue="false"
            android:key="power_profile_enable"
            android:persistent="false"
            android:title="@string/power_profile_enable" />

        <ListPreference
            android:key="default_power_profile"
            android:title="@string/default_power_profile"
            android:persistent="false"
            android:dependency="power_profile_enable"/>

        <ListPreference
            android:key="screen_off_power_profile"
            android:title="@string/screen_off_power_profile"
            android:persistent="false"
            android:dependency="power_profile_enable"/>

        <PreferenceScreen
            android:key="power_profile_apps"
            android:title="@string/power_profile_apps"
            android:summary="@string/power_profile_apps_summary"
            android:dependency="power_profile_enable"
            android:fragment="com.brewcrewfoo.performance.fragments.PowerProfileApps" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="power_profile_plugged"
            android:persistent="false"
            android:summary="@string/power_profile_plugged_summary"
            android:title="@string/power_profile_plugged"
            android:dependency="power_profile_enable" />

        <PreferenceScreen
            android:key="power_profile_settings"
            android:title="@string/power_profile"
            android:summary="@string/power_profile_summary"
            android:fragment="com.brewcrewfoo.performance.fragments.PowerProfileSettings" />

    </PreferenceCategory>

</PreferenceScreen>
