<?xml version="1.0" encoding="utf-8"?>
<!--
Performance Control - An Android CPU Control application
Copyright (C) 2012 Jared Rummler
Copyright (C) 2012  James Roberts

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ListView
            android:id="@+id/ListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/BottomBar"
            android:cacheColorHint="#00000000"
            >
    </ListView>

    <TextView
            android:id="@+id/emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/not_supported"
            android:visibility="gone"/>


    <RelativeLayout
            android:id="@+id/BottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="14dip">

        <TextView
                android:id="@+id/set_on_boot_voltage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/sob"
                android:textSize="14sp"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:paddingBottom="4dip"
                android:paddingLeft="4dip"/>

        <Switch
                android:id="@+id/applyAtBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/set_on_boot_voltage"/>

        <Button
                android:id="@+id/applyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/apply_values"
                android:textSize="14sp"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>


</RelativeLayout>

